--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UsedCars">Used Cars</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="OfferYourCar">Offer Your Car</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Offer">Offer Your Car</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
