--- a/Views/Account/SignUp.cshtml
+++ b/Views/Account/SignUp.cshtml
@@ -45,15 +45,10 @@
             </div>
 
 
-            <div class="mb-3">
-                <label asp-for="Role" class="form-label"></label>
-                <select asp-for="Role" class="form-select" required>
-                    <option value="">Select Role</option>
-                    <option>User</option>
-                    <option>Admin</option>
-                    <option>Moderator</option>
-                </select>
-            </div>
+            
+            <input asp-for="Role" class="form-check-input" type="checkbox" hidden  value="User" />
+                
+            
 
             <div class="d-grid">
                 <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
